<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Turntable">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1000dp"
        android:layout_height="1500dp"
        android:src="@mipmap/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/button5"
        style="@style/button_style"
        android:layout_width="304dp"
        android:layout_height="65dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="createTable"
        android:text="@string/design_your_own_table"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <Button
        android:id="@+id/button6"
        style="@style/button_style"
        android:layout_width="304dp"
        android:layout_height="65dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="DrawTable"
        android:text="@string/saved_table"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <Button
        android:id="@+id/button8"
        style="@style/button_style"
        android:layout_width="304dp"
        android:layout_height="65dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="83dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="SavedTable"
        android:text="@string/saved_table1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>